--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML+CSS</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css">
+    <script>
+    
+var luck = ["大凶","凶","末吉","小吉","中吉", "吉", "大吉"];
+var colors = ["赤","青","黄","緑","白","黒","金","銀","茶","紫"];
+var message, random_luck, random_color;
+var btn = document.getElementById("btn");
+var output = document.getElementById("output");
+
+btn.onclick = function(){
+  random_luck = luck[ Math.floor( Math.random() * luck.length ) ];
+  random_color = colors[ Math.floor( Math.random() * colors.length ) ];
+
+  message = "<h2>" + random_luck + "</h2>";
+  message += "<p>ラッキーカラーは " + random_color + "</p>";
+  output.innerHTML = message;
+}
+
+</script>
   </head>
   <body>
     <div id="omikuji">
