--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>HTML+CSS</title>
+    <title>占い</title>
     <link rel="stylesheet" type="text/css" href='main.css'>
     <script>
     
