--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     var btn = document.getElementById("btn");
     var output = document.getElementById("output");
 
-    btn.onclick = function()
+    btn.addListener("onclick" ,function()
     {
       random_luck = luck[ Math.floor( Math.random() * luck.length ) ];
       random_color = colors[ Math.floor( Math.random() * colors.length ) ];
