--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     var btn = document.getElementById("btn");
     var output = document.getElementById("output");
 
-    btn.addListener("click" ,function()
+    btn.addEventListener("click" ,function()
     {
       random_luck = luck[ Math.floor( Math.random() * luck.length ) ];
       random_color = colors[ Math.floor( Math.random() * colors.length ) ];
