--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>占い</title>
-    <link rel="stylesheet" href='main.css'>
+    <link rel="stylesheet" type = 'text/css' href='main.css'>
 
   </head>
   <body>
